Add BaguettePizaa.html as a link to the main page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1> Odin Recipes </h1>
     <a href="recipes/YakisobaChicken.html">Yakisoba Chicken</a>"
     <a href="recipes/ReesesBrownies.html">Reeses Brownies</a>"
+    <a href="recipes/BaguettePizza.html">Baguette Pizza</a>"
 </body>
 </html>
