--- a/recipes/ReesesBrownies.html
+++ b/recipes/ReesesBrownies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reeses Brownies</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <h1> Reeses Brownies </h1>
